--- a/SparkNotebooks/Scala K-Means C4E.snb.ipynb
+++ b/SparkNotebooks/Scala K-Means C4E.snb.ipynb
@@ -18,7 +18,7 @@
     "customDeps" : [
       "com.github.haifengl:smile-scala_2.11:1.5.0",
       "org.apache.sanselan % sanselan % 0.97-incubator",
-      "clustering4ever % clustering4ever_2.11 % 0.2.3"
+      "clustering4ever % clustering4ever_2.11 % 0.3.6"
     ],
     "customImports" : null,
     "customArgs" : null,
@@ -49,18 +49,19 @@
       },
       "cell_type" : "code",
       "source" : [
-        "import smile.plot._\n",
-        "import clustering4ever.scala.clustering.kmeans.KMeans\n",
-        "import clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\n",
+        "import _root_.smile.plot._\n",
+        "import _root_.clustering4ever.scala.clustering.kmeans.KMeans\n",
+        "import _root_.clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\n",
         "import _root_.scala.io.Source\n",
-        "import clustering4ever.spark.indexes.ExternalIndexes\n",
-        "import clustering4ever.scala.indexes.ExternalIndexes"
+        "import _root_.clustering4ever.spark.indexes.ExternalIndexes\n",
+        "import _root_.clustering4ever.scala.indexes.{ExternalIndexes => ScalaExternalIndexes}\n",
+        "import _root_.clustering4ever.scala.indexes.NmiNormalizationNature._"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "import smile.plot._\nimport clustering4ever.scala.clustering.kmeans.KMeans\nimport clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\nimport _root_.scala.io.Source\nimport clustering4ever.spark.indexes.ExternalIndexes\nimport clustering4ever.scala.indexes.ExternalIndexes\n"
+          "text" : "import _root_.smile.plot._\nimport _root_.clustering4ever.scala.clustering.kmeans.KMeans\nimport _root_.clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\nimport _root_.scala.io.Source\nimport _root_.clustering4ever.spark.indexes.ExternalIndexes\nimport _root_.clustering4ever.scala.indexes.{ExternalIndexes=>ScalaExternalIndexes}\nimport _root_.clustering4ever.scala.indexes.NmiNormalizationNature._\n"
         },
         {
           "metadata" : { },
@@ -68,8 +69,35 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 3,
-          "time" : "Took: 0.685s, at 2018-04-04 17:15"
+          "execution_count" : 18,
+          "time" : "Took: 0.461s, at 2018-04-08 16:49"
+        }
+      ]
+    },
+    {
+      "metadata" : {
+        "id" : "C001456FD09A4F8697712D9D1DF3EB17"
+      },
+      "cell_type" : "markdown",
+      "source" : "## Download dataset Aggregation"
+    },
+    {
+      "metadata" : {
+        "trusted" : true,
+        "input_collapsed" : false,
+        "collapsed" : false,
+        "id" : "ADF3A07D58F74656A91E11A1FF13920B"
+      },
+      "cell_type" : "code",
+      "source" : [
+        ":sh wget -P /tmp/ http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\n",
+        ":sh wget -P /tmp/ http://www.clustering4ever.org/Datasets/Aggregation/labels"
+      ],
+      "outputs" : [
+        {
+          "name" : "stdout",
+          "output_type" : "stream",
+          "text" : "--2018-04-08 16:46:50--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.1’\n\n     0K .......                                               100% 1.52G=0s\n\n2018-04-08 16:46:50 (1.52 GB/s) - ‘/tmp/aggregation.csv.1’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-04-08 16:46:50--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-04-08 16:46:50--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels’\n\n     0K .                                                     100%  404M=0s\n\n2018-04-08 16:46:50 (404 MB/s) - ‘/tmp/labels’ saved [1576/1576]\n\nFINISHED --2018-04-08 16:46:50--\nTotal wall clock time: 0.09s\nDownloaded: 2 files, 9.4K in 0s (1.04 GB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 67 elided\n"
         }
       ]
     },
@@ -78,7 +106,7 @@
         "id" : "4BEB170294834C8B92F180754CF0F42F"
       },
       "cell_type" : "markdown",
-      "source" : "## Import data as Array[(Int, Array[Double])]"
+      "source" : "## Import data as Array[Array[Double]]"
     },
     {
       "metadata" : {
@@ -89,14 +117,15 @@
       },
       "cell_type" : "code",
       "source" : [
-        "val path = \"/home/KyBe/tmpDS/aggregation.csv\"\n",
-        "val data = Source.fromFile(path).getLines.map(_.split(\",\").map(_.toDouble)).zipWithIndex.map(_.swap).toArray"
+        "val path = \"/tmp/aggregation.csv\"\n",
+        "val data = Source.fromFile(path).getLines.map(_.split(\",\").map(_.toDouble)).toArray\n",
+        "val labelsPath = \"/tmp/labels\""
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "path: String = /home/KyBe/tmpDS/aggregation.csv\ndata: Array[(Int, Array[Double])] = Array((0,Array(15.55, 28.65)), (1,Array(14.9, 27.55)), (2,Array(14.45, 28.35)), (3,Array(14.15, 28.8)), (4,Array(13.75, 28.05)), (5,Array(13.35, 28.45)), (6,Array(13.0, 29.15)), (7,Array(13.45, 27.5)), (8,Array(13.6, 26.5)), (9,Array(12.8, 27.35)), (10,Array(12.4, 27.85)), (11,Array(12.3, 28.4)), (12,Array(12.2, 28.65)), (13,Array(13.4, 25.1)), (14,Array(12.95, 25.95)), (15,Array(12.9, 26.5)), (16,Array(11.85, 27.0)), (17,Array(11.35, 28.0)), (18,Array(11.15, 28.7)), (19,Array(11.25, 27.4)), (20,Array(10.75, 27.7)), (21,Array(10.5, 28.35)), (22,Array(9.65, 28.45)), (23,Array(10.25, 27.25)), (24,Array(10.75, 26.55)), (25,Array(11.7, 26.35)), (26,Array(11.6, 25.9)), (27,Array(11.9, 25.05)), (28,Array(12.6,..."
+          "text" : "path: String = /tmp/aggregation.csv\ndata: Array[Array[Double]] = Array(Array(15.55, 28.65), Array(14.9, 27.55), Array(14.45, 28.35), Array(14.15, 28.8), Array(13.75, 28.05), Array(13.35, 28.45), Array(13.0, 29.15), Array(13.45, 27.5), Array(13.6, 26.5), Array(12.8, 27.35), Array(12.4, 27.85), Array(12.3, 28.4), Array(12.2, 28.65), Array(13.4, 25.1), Array(12.95, 25.95), Array(12.9, 26.5), Array(11.85, 27.0), Array(11.35, 28.0), Array(11.15, 28.7), Array(11.25, 27.4), Array(10.75, 27.7), Array(10.5, 28.35), Array(9.65, 28.45), Array(10.25, 27.25), Array(10.75, 26.55), Array(11.7, 26.35), Array(11.6, 25.9), Array(11.9, 25.05), Array(12.6, 24.05), Array(11.9, 24.5), Array(11.1, 25.2), Array(10.55, 25.15), Array(10.05, 25.95), Array(9.35, 26.6), Array(9.3, 27.25), Array(9.2, 27.8), Array(7...."
         },
         {
           "metadata" : { },
@@ -104,8 +133,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 4,
-          "time" : "Took: 0.884s, at 2018-04-04 17:15"
+          "execution_count" : 14,
+          "time" : "Took: 0.497s, at 2018-04-08 16:47"
         }
       ]
     },
@@ -130,7 +159,6 @@
         "val epsilon = 0.001\n",
         "// True defines the true Euclidean with square root, set it to false to avoid the square\n",
         "val metric1 = new Euclidean(true)\n",
-        "val metric2 = new Cosine\n",
         "// Minkowski(p) where p is the Minkowski parameter\n",
         "val metric3 = new Minkowski(4)"
       ],
@@ -138,7 +166,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "k: Int = 6\niterMax: Int = 100\nepsilon: Double = 0.001\nmetric1: clustering4ever.math.distances.scalar.Euclidean = Euclidean with root applied\nmetric2: clustering4ever.math.distances.scalar.Cosine = clustering4ever.math.distances.scalar.Cosine@4ffc1b5c\nmetric3: clustering4ever.math.distances.scalar.Minkowski = clustering4ever.math.distances.scalar.Minkowski@73c74a41\n"
+          "text" : "k: Int = 6\niterMax: Int = 100\nepsilon: Double = 0.001\nmetric1: clustering4ever.math.distances.scalar.Euclidean = Euclidean with root applied\nmetric3: clustering4ever.math.distances.scalar.Minkowski = clustering4ever.math.distances.scalar.Minkowski@1e0610d\n"
         },
         {
           "metadata" : { },
@@ -146,8 +174,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 5,
-          "time" : "Took: 0.682s, at 2018-04-04 17:15"
+          "execution_count" : 21,
+          "time" : "Took: 0.485s, at 2018-04-08 16:52"
         }
       ]
     },
@@ -168,13 +196,13 @@
       "cell_type" : "code",
       "source" : [
         "val model = KMeans.run(data, k, epsilon, iterMax, metric1)\n",
-        "val clusterized = data.map{ case (id, v) => (model.predict(v), (id, v)) }"
+        "val clusterized = data.map( v => (model.predict(v), v) )"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "model: clustering4ever.scala.clustering.kmeans.KMeansModel = clustering4ever.scala.clustering.kmeans.KMeansModel@2cd0d06e\nclusterized: Array[(model.ClusterID, (Int, Array[Double]))] = Array((4,(0,Array(15.55, 28.65))), (1,(1,Array(14.9, 27.55))), (1,(2,Array(14.45, 28.35))), (1,(3,Array(14.15, 28.8))), (1,(4,Array(13.75, 28.05))), (1,(5,Array(13.35, 28.45))), (1,(6,Array(13.0, 29.15))), (1,(7,Array(13.45, 27.5))), (1,(8,Array(13.6, 26.5))), (1,(9,Array(12.8, 27.35))), (1,(10,Array(12.4, 27.85))), (1,(11,Array(12.3, 28.4))), (1,(12,Array(12.2, 28.65))), (1,(13,Array(13.4, 25.1))), (1,(14,Array(12.95, 25.95))), (1,(15,Array(12.9, 26.5))), (1,(16,Array(11.85, 27.0))), (1,(17,Array(11.35, 28.0))), (1,(18,Array(11.15, 28.7))), (1,(19,Array(11.25, 27.4))), (1,(20,Array(10.75, 27.7))), (1,(21,..."
+          "text" : "model: clustering4ever.scala.clustering.kmeans.KMeansModel = clustering4ever.scala.clustering.kmeans.KMeansModel@7ba94bcd\nclusterized: Array[(model.ClusterID, Array[Double])] = Array((1,Array(15.55, 28.65)), (5,Array(14.9, 27.55)), (5,Array(14.45, 28.35)), (5,Array(14.15, 28.8)), (5,Array(13.75, 28.05)), (5,Array(13.35, 28.45)), (5,Array(13.0, 29.15)), (5,Array(13.45, 27.5)), (5,Array(13.6, 26.5)), (5,Array(12.8, 27.35)), (5,Array(12.4, 27.85)), (5,Array(12.3, 28.4)), (5,Array(12.2, 28.65)), (5,Array(13.4, 25.1)), (5,Array(12.95, 25.95)), (5,Array(12.9, 26.5)), (5,Array(11.85, 27.0)), (5,Array(11.35, 28.0)), (5,Array(11.15, 28.7)), (5,Array(11.25, 27.4)), (5,Array(10.75, 27.7)), (5,Array(10.5, 28.35)), (5,Array(9.65, 28.45)), (5,Array(10.25, 27.25)), (5,Array(10.75, 26.55)), (5,Array(11..."
         },
         {
           "metadata" : { },
@@ -182,8 +210,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 6,
-          "time" : "Took: 0.823s, at 2018-04-04 17:15"
+          "execution_count" : 11,
+          "time" : "Took: 0.657s, at 2018-04-08 16:46"
         }
       ]
     },
@@ -241,16 +269,16 @@
       },
       "cell_type" : "code",
       "source" : [
-        "val trueLabels = Source.fromFile(\"/home/KyBe/tmpDS/labels\").getLines.map(_.toInt).toArray\n",
+        "val trueLabels = Source.fromFile(labelsPath).getLines.map(_.toInt).toArray\n",
         "\n",
-        "val (_, trueLabelsFrom0) = ExternalIndexes.prepareList(trueLabels)\n",
+        "val (_, trueLabelsFrom0) = ScalaExternalIndexes.prepareList(trueLabels)\n",
         "\n",
         "val predicts = clusterized.map(_._1)\n",
         "\n",
         "val trueAndPredictRDD2 = sc.parallelize(trueLabelsFrom0.zip(predicts))\n",
         "\n",
-        "val nmi = ExternalIndexes.nmi(trueLabelsFrom0, predicts, \"sqrt\")\n",
-        "val nmi2 = SparkExternalsIndexes.nmi(sc, trueAndPredictRDD2, \"sqrt\")\n",
+        "val nmi = ScalaExternalIndexes.nmi(trueLabelsFrom0, predicts, SQRT)\n",
+        "val nmi2 = ExternalIndexes.nmi(sc, trueAndPredictRDD2, SQRT)\n",
         "\n",
         "(nmi, nmi2)"
       ],
@@ -263,11 +291,11 @@
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "(0.8717730364616668,0.8717730364616668)"
+            "text/html" : "(0.874376467544816,0.874376467544816)"
           },
           "output_type" : "execute_result",
-          "execution_count" : 15,
-          "time" : "Took: 1.369s, at 2018-04-04 06:54"
+          "execution_count" : 20,
+          "time" : "Took: 1.409s, at 2018-04-08 16:49"
         }
       ]
     }
