--- a/SparkNotebooks/Scala Gaussian Mixtures C4E.snb.ipynb
+++ b/SparkNotebooks/Scala Gaussian Mixtures C4E.snb.ipynb
@@ -1,7 +1,7 @@
 {
   "metadata" : {
-    "id" : "e6ec2d81-a699-4d70-b8a4-31dcf5e5c8f6",
-    "name" : "Scala K-Means C4E.snb.ipynb",
+    "id" : "6bf08c71-e5db-4117-ae8a-b371914784fa",
+    "name" : "Scala Gaussian Mixtures C4E",
     "user_save_timestamp" : "2018-04-04T17:17:57.904Z",
     "auto_save_timestamp" : "1970-01-01T01:00:00.000Z",
     "language_info" : {
@@ -38,7 +38,7 @@
         "id" : "9BE3CBFDDB324D29914085C97E53D087"
       },
       "cell_type" : "markdown",
-      "source" : "# Scala _K_-Means"
+      "source" : "# Scala Gaussian Mixtures"
     },
     {
       "metadata" : {
@@ -50,7 +50,7 @@
       "cell_type" : "code",
       "source" : [
         "import _root_.smile.plot._\n",
-        "import _root_.clustering4ever.scala.clustering.kmeans.KMeans\n",
+        "import _root_.clustering4ever.scala.clustering.gaussianmixtures.GaussianMixtures\n",
         "import _root_.clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\n",
         "import _root_.scala.io.Source\n",
         "import _root_.clustering4ever.spark.indexes.ExternalIndexes\n",
@@ -61,7 +61,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "import _root_.smile.plot._\nimport _root_.clustering4ever.scala.clustering.kmeans.KMeans\nimport _root_.clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\nimport _root_.scala.io.Source\nimport _root_.clustering4ever.spark.indexes.ExternalIndexes\nimport _root_.clustering4ever.scala.indexes.{ExternalIndexes=>ScalaExternalIndexes}\nimport _root_.clustering4ever.scala.indexes.NmiNormalizationNature._\n"
+          "text" : "import _root_.smile.plot._\nimport _root_.clustering4ever.scala.clustering.gaussianmixtures.GaussianMixtures\nimport _root_.clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\nimport _root_.scala.io.Source\nimport _root_.clustering4ever.spark.indexes.ExternalIndexes\nimport _root_.clustering4ever.scala.indexes.{ExternalIndexes=>ScalaExternalIndexes}\nimport _root_.clustering4ever.scala.indexes.NmiNormalizationNature._\n"
         },
         {
           "metadata" : { },
@@ -69,8 +69,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 18,
-          "time" : "Took: 0.461s, at 2018-04-08 16:49"
+          "execution_count" : 1,
+          "time" : "Took: 0.824s, at 2018-04-08 21:11"
         }
       ]
     },
@@ -97,7 +97,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-04-08 16:46:50--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.1’\n\n     0K .......                                               100% 1.52G=0s\n\n2018-04-08 16:46:50 (1.52 GB/s) - ‘/tmp/aggregation.csv.1’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-04-08 16:46:50--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-04-08 16:46:50--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels’\n\n     0K .                                                     100%  404M=0s\n\n2018-04-08 16:46:50 (404 MB/s) - ‘/tmp/labels’ saved [1576/1576]\n\nFINISHED --2018-04-08 16:46:50--\nTotal wall clock time: 0.09s\nDownloaded: 2 files, 9.4K in 0s (1.04 GB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 67 elided\n"
+          "text" : "--2018-04-08 21:11:18--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.3’\n\n     0K .......                                               100% 1.68G=0s\n\n2018-04-08 21:11:18 (1.68 GB/s) - ‘/tmp/aggregation.csv.3’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-04-08 21:11:18--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-04-08 21:11:18--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.2’\n\n     0K .                                                     100%  291M=0s\n\n2018-04-08 21:11:18 (291 MB/s) - ‘/tmp/labels.2’ saved [1576/1576]\n\nFINISHED --2018-04-08 21:11:18--\nTotal wall clock time: 0.2s\nDownloaded: 2 files, 9.4K in 0s (953 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 67 elided\n"
         }
       ]
     },
@@ -133,8 +133,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 14,
-          "time" : "Took: 0.497s, at 2018-04-08 16:47"
+          "execution_count" : 3,
+          "time" : "Took: 0.809s, at 2018-04-08 21:11"
         }
       ]
     },
@@ -154,7 +154,7 @@
       },
       "cell_type" : "code",
       "source" : [
-        "val k = 6\n",
+        "val k = 7\n",
         "val iterMax = 100\n",
         "val epsilon = 0.001\n",
         "// True defines the true Euclidean with square root, set it to false to avoid the square\n",
@@ -166,7 +166,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "k: Int = 6\niterMax: Int = 100\nepsilon: Double = 0.001\nmetric1: clustering4ever.math.distances.scalar.Euclidean = Euclidean with root applied\nmetric3: clustering4ever.math.distances.scalar.Minkowski = clustering4ever.math.distances.scalar.Minkowski@1e0610d\n"
+          "text" : "k: Int = 7\niterMax: Int = 100\nepsilon: Double = 0.001\nmetric1: clustering4ever.math.distances.scalar.Euclidean = Euclidean with root applied\nmetric3: clustering4ever.math.distances.scalar.Minkowski = clustering4ever.math.distances.scalar.Minkowski@79ff00f8\n"
         },
         {
           "metadata" : { },
@@ -174,8 +174,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 21,
-          "time" : "Took: 0.485s, at 2018-04-08 16:52"
+          "execution_count" : 4,
+          "time" : "Took: 0.677s, at 2018-04-08 21:11"
         }
       ]
     },
@@ -195,14 +195,14 @@
       },
       "cell_type" : "code",
       "source" : [
-        "val model = KMeans.run(data, k, epsilon, iterMax, metric1)\n",
+        "val model = GaussianMixtures.run(data, k, epsilon, iterMax, metric1)\n",
         "val clusterized = data.map( v => (model.predict(v), v) )"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "model: clustering4ever.scala.clustering.kmeans.KMeansModel = clustering4ever.scala.clustering.kmeans.KMeansModel@7ba94bcd\nclusterized: Array[(model.ClusterID, Array[Double])] = Array((1,Array(15.55, 28.65)), (5,Array(14.9, 27.55)), (5,Array(14.45, 28.35)), (5,Array(14.15, 28.8)), (5,Array(13.75, 28.05)), (5,Array(13.35, 28.45)), (5,Array(13.0, 29.15)), (5,Array(13.45, 27.5)), (5,Array(13.6, 26.5)), (5,Array(12.8, 27.35)), (5,Array(12.4, 27.85)), (5,Array(12.3, 28.4)), (5,Array(12.2, 28.65)), (5,Array(13.4, 25.1)), (5,Array(12.95, 25.95)), (5,Array(12.9, 26.5)), (5,Array(11.85, 27.0)), (5,Array(11.35, 28.0)), (5,Array(11.15, 28.7)), (5,Array(11.25, 27.4)), (5,Array(10.75, 27.7)), (5,Array(10.5, 28.35)), (5,Array(9.65, 28.45)), (5,Array(10.25, 27.25)), (5,Array(10.75, 26.55)), (5,Array(11..."
+          "text" : "model: clustering4ever.scala.clustering.gaussianmixtures.GaussianMixturesModel = clustering4ever.scala.clustering.gaussianmixtures.GaussianMixturesModel@69a81ba6\nclusterized: Array[(model.ClusterID, Array[Double])] = Array((6,Array(15.55, 28.65)), (6,Array(14.9, 27.55)), (6,Array(14.45, 28.35)), (6,Array(14.15, 28.8)), (6,Array(13.75, 28.05)), (6,Array(13.35, 28.45)), (6,Array(13.0, 29.15)), (6,Array(13.45, 27.5)), (6,Array(13.6, 26.5)), (6,Array(12.8, 27.35)), (6,Array(12.4, 27.85)), (6,Array(12.3, 28.4)), (6,Array(12.2, 28.65)), (6,Array(13.4, 25.1)), (6,Array(12.95, 25.95)), (6,Array(12.9, 26.5)), (6,Array(11.85, 27.0)), (6,Array(11.35, 28.0)), (6,Array(11.15, 28.7)), (6,Array(11.25, 27.4)), (6,Array(10.75, 27.7)), (6,Array(10.5, 28.35)), (6,Array(9.65, 28.45)), (6,Array(10.25, 27.25..."
         },
         {
           "metadata" : { },
@@ -210,8 +210,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 11,
-          "time" : "Took: 0.657s, at 2018-04-08 16:46"
+          "execution_count" : 6,
+          "time" : "Took: 0.962s, at 2018-04-08 21:11"
         }
       ]
     },
@@ -231,8 +231,8 @@
       },
       "cell_type" : "code",
       "source" : [
-        "val rawData = clusterized.map{ case (clusterID, (id, vector)) => vector }\n",
-        "val labels = clusterized.map{ case (clusterID, (id, vector)) => clusterID }\n",
+        "val rawData = clusterized.map{ case (clusterID, vector) => vector }\n",
+        "val labels = clusterized.map{ case (clusterID, vector) => clusterID }\n",
         "\n",
         "plot(rawData, labels, '*', Palette.COLORS)"
       ],
@@ -249,7 +249,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 7,
-          "time" : "Took: 1.387s, at 2018-04-04 17:15"
+          "time" : "Took: 1.440s, at 2018-04-08 21:11"
         }
       ]
     },
@@ -291,11 +291,11 @@
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "(0.874376467544816,0.874376467544816)"
+            "text/html" : "(0.7329518321171066,0.7329518321171066)"
           },
           "output_type" : "execute_result",
-          "execution_count" : 20,
-          "time" : "Took: 1.409s, at 2018-04-08 16:49"
+          "execution_count" : 8,
+          "time" : "Took: 1.443s, at 2018-04-08 21:12"
         }
       ]
     }
