--- a/SparkNotebooks/Spark K-Means C4E.snb.ipynb
+++ b/SparkNotebooks/Spark K-Means C4E.snb.ipynb
@@ -18,7 +18,7 @@
     "customDeps" : [
       "com.github.haifengl:smile-scala_2.11:1.5.0",
       "org.apache.sanselan % sanselan % 0.97-incubator",
-      "clustering4ever % clustering4ever_2.11 % 0.6.3"
+      "clustering4ever % clustering4ever_2.11 % 0.6.4"
     ],
     "customImports" : null,
     "customArgs" : null,
@@ -77,7 +77,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 1,
-          "time" : "Took: 1.010s, at 2018-09-06 08:59"
+          "time" : "Took: 3.438s, at 2018-09-07 13:29"
         }
       ]
     },
@@ -104,7 +104,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-06 08:59:16--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.11’\n\n     0K .......                                               100% 88.1M=0s\n\n2018-09-06 08:59:16 (88.1 MB/s) - ‘/tmp/aggregation.csv.11’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-06 08:59:16--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-06 08:59:16--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.13’\n\n     0K .                                                     100%  111M=0s\n\n2018-09-06 08:59:16 (111 MB/s) - ‘/tmp/labels.13’ saved [1576/1576]\n\nFINISHED --2018-09-06 08:59:16--\nTotal wall clock time: 0.3s\nDownloaded: 2 files, 9.4K in 0s (91.1 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
+          "text" : "--2018-09-07 13:29:32--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.6’\n\n     0K .......                                               100%  973M=0s\n\n2018-09-07 13:29:32 (973 MB/s) - ‘/tmp/aggregation.csv.6’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-07 13:29:32--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-07 13:29:32--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.6’\n\n     0K .                                                     100%  187M=0s\n\n2018-09-07 13:29:32 (187 MB/s) - ‘/tmp/labels.6’ saved [1576/1576]\n\nFINISHED --2018-09-07 13:29:32--\nTotal wall clock time: 0.07s\nDownloaded: 2 files, 9.4K in 0s (577 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
         }
       ]
     },
@@ -150,7 +150,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 3,
-          "time" : "Took: 2.522s, at 2018-09-06 08:59"
+          "time" : "Took: 13.856s, at 2018-09-07 13:29"
         }
       ]
     },
@@ -187,7 +187,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 4,
-          "time" : "Took: 0.548s, at 2018-09-06 08:59"
+          "time" : "Took: 2.960s, at 2018-09-07 13:29"
         }
       ]
     },
@@ -221,9 +221,6 @@
         "  epsilon,\n",
         "  iterMax\n",
         ")\n",
-        "\n",
-        "val clusterized = rdd.map( cz => (model.centerPredict(cz.vector), cz) )\n",
-        "val lclusterized = clusterized.collect\n",
         "val t2 = System.currentTimeMillis\n",
         "(t2 - t1) / 1000D"
       ],
@@ -231,16 +228,45 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 1536217160790\nmodel: clustering4ever.spark.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.spark.clustering.kmeans.KMeansModel@25211a02\nclusterized: org.apache.spark.rdd.RDD[(model.ClusterID, clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]])] = MapPartitionsRDD[28] at map at <console>:110\nlclusterized: Array[(model.ClusterID, clustering4ever..."
+          "text" : "t1: Long = 1536319794383\nmodel: clustering4ever.spark.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.spark.clustering.kmeans.KMeansModel@4d432010\nclusterized: org.apache.spark.rdd.RDD[(model.ClusterID, clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]])] = MapPartitionsRDD[26] at map at <console>:110\nlclusterized: Array[(model.ClusterID, clustering4ever..."
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "0.856"
+            "text/html" : "2.002"
           },
           "output_type" : "execute_result",
           "execution_count" : 5,
-          "time" : "Took: 1.847s, at 2018-09-06 08:59"
+          "time" : "Took: 8.044s, at 2018-09-07 13:30"
+        }
+      ]
+    },
+    {
+      "metadata" : {
+        "trusted" : true,
+        "input_collapsed" : false,
+        "collapsed" : false,
+        "id" : "B36132A2EEDD4BB291A81E5374189B1F"
+      },
+      "cell_type" : "code",
+      "source" : [
+        "val clusterized = model.centerPredict(rdd)\n",
+        "val lclusterized = clusterized.collect"
+      ],
+      "outputs" : [
+        {
+          "name" : "stdout",
+          "output_type" : "stream",
+          "text" : "clusterized: org.apache.spark.rdd.RDD[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[31] at map at KCommonsSpark.scala:179\nlclusterized: Array[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = Array(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@18fcc6fa,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@7afc01d3,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@42296a4d,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@32bcdb0f,List()..."
+        },
+        {
+          "metadata" : { },
+          "data" : {
+            "text/html" : ""
+          },
+          "output_type" : "execute_result",
+          "execution_count" : 16,
+          "time" : "Took: 0.640s, at 2018-09-07 13:32"
         }
       ]
     },
@@ -260,8 +286,8 @@
       },
       "cell_type" : "code",
       "source" : [
-        "val rawData = lclusterized.map{ case (clusterID, cz) => cz.vector.toArray }.toArray\n",
-        "val labels = lclusterized.map{ case (clusterID, _) => clusterID }.toArray\n",
+        "val rawData = lclusterized.map(_.vector.toArray).toArray\n",
+        "val labels = lclusterized.map( cz => cz.clusterID ).toArray\n",
         "\n",
         "plot(rawData, labels, '*', Palette.COLORS)"
       ],
@@ -274,11 +300,11 @@
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "Window(javax.swing.JFrame[frame0,460,37,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 1,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
+            "text/html" : "Window(javax.swing.JFrame[frame0,2380,400,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 1,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
           },
           "output_type" : "execute_result",
-          "execution_count" : 6,
-          "time" : "Took: 1.255s, at 2018-09-06 08:59"
+          "execution_count" : 19,
+          "time" : "Took: 1.074s, at 2018-09-07 13:33"
         }
       ]
     },
@@ -298,15 +324,15 @@
       },
       "cell_type" : "code",
       "source" : [
-        "val trueLabels = Source.fromFile(labelsPath).getLines.map(_.toInt)\n",
+        "val trueLabels = sc.parallelize(Source.fromFile(labelsPath).getLines.map(_.toInt).toSeq)\n",
         "\n",
-        "val (_, trueLabelsFrom0) = ScalaExternalIndexes.prepareLabels(trueLabels)\n",
+        "val (_, trueLabelsFrom0) = ExternalIndexes.prepareLabels(trueLabels)\n",
         "\n",
-        "val predicts = lclusterized.map(_._1).toVector\n",
+        "val predicts = clusterized.map(_.clusterID)\n",
         "\n",
-        "val trueAndPredictRDD2 = sc.parallelize(trueLabelsFrom0.zip(predicts).seq)\n",
+        "val trueAndPredictRDD = sc.parallelize(trueLabelsFrom0.collect.zip(predicts.collect).map{ case(gt, pred) => (gt.toInt, pred) })\n",
         "\n",
-        "val nmi = ExternalIndexes.nmi(sc, trueAndPredictRDD2, SQRT)\n",
+        "val nmi = ExternalIndexes.nmi(sc, trueAndPredictRDD, SQRT)\n",
         "\n",
         "nmi"
       ],
@@ -314,7 +340,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "<console>:102: error: not found: value ScalaExternalIndexes\n       val (_, trueLabelsFrom0) = ScalaExternalIndexes.prepareLabels(trueLabels)\n                                  ^\n<console>:106: error: value zip is not a member of Any\nError occurred in an application involving default arguments.\n       val trueAndPredictRDD2 = sc.parallelize(trueLabelsFrom0.zip(predicts).seq)\n                                                               ^\n"
+          "text" : "trueLabels: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[41] at parallelize at <console>:100\ntrueLabelsFrom0: org.apache.spark.rdd.RDD[Long] = MapPartitionsRDD[46] at map at ExternalIndexes.scala:81\npredicts: org.apache.spark.rdd.RDD[Int] = MapPartitionsRDD[47] at map at <console>:104\ntrueAndPredictRDD: org.apache.spark.rdd.RDD[(Int, Int)] = ParallelCollectionRDD[48] at parallelize at <console>:106\nnmi: Double = 0.8497379557818189\nres41: Double = 0.8497379557818189\n"
+        },
+        {
+          "metadata" : { },
+          "data" : {
+            "text/html" : "0.8497379557818189"
+          },
+          "output_type" : "execute_result",
+          "execution_count" : 25,
+          "time" : "Took: 1.092s, at 2018-09-07 13:35"
         }
       ]
     }
