--- a/SparkNotebooks/Scala Gradient Ascent C4E.snb.ipynb
+++ b/SparkNotebooks/Scala Gradient Ascent C4E.snb.ipynb
@@ -18,7 +18,7 @@
     "customDeps" : [
       "com.github.haifengl:smile-scala_2.11:1.5.0",
       "org.apache.sanselan % sanselan % 0.97-incubator",
-      "clustering4ever % clustering4ever_2.11 % 0.6.4-SNAPSHOT"
+      "clustering4ever % clustering4ever_2.11 % 0.6.4"
     ],
     "customImports" : null,
     "customArgs" : null,
@@ -73,7 +73,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 1,
-          "time" : "Took: 0.996s, at 2018-09-07 12:15"
+          "time" : "Took: 0.934s, at 2018-09-07 14:09"
         }
       ]
     },
@@ -100,7 +100,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-07 12:15:25--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.5’\n\n     0K .......                                               100%  244M=0s\n\n2018-09-07 12:15:25 (244 MB/s) - ‘/tmp/aggregation.csv.5’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-07 12:15:25--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-07 12:15:25--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.5’\n\n     0K .                                                     100%  230M=0s\n\n2018-09-07 12:15:25 (230 MB/s) - ‘/tmp/labels.5’ saved [1576/1576]\n\nFINISHED --2018-09-07 12:15:25--\nTotal wall clock time: 0.06s\nDownloaded: 2 files, 9.4K in 0s (241 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 67 elided\n"
+          "text" : "--2018-09-07 14:09:41--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.10’\n\n     0K .......                                               100%  724M=0s\n\n2018-09-07 14:09:41 (724 MB/s) - ‘/tmp/aggregation.csv.10’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-07 14:09:41--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-07 14:09:41--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.12’\n\n     0K .                                                     100%  220M=0s\n\n2018-09-07 14:09:41 (220 MB/s) - ‘/tmp/labels.12’ saved [1576/1576]\n\nFINISHED --2018-09-07 14:09:41--\nTotal wall clock time: 0.08s\nDownloaded: 2 files, 9.4K in 0s (527 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 67 elided\n"
         }
       ]
     },
@@ -129,7 +129,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "path: String = /tmp/aggregation.csv\ndata: scala.collection.parallel.mutable.ParArray[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@2e28b6ab,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@484b385b,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@50b8936c,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@1653b499,List(),2147483647), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@7d25d516,List(),2147483647), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@6cb..."
+          "text" : "path: String = /tmp/aggregation.csv\ndata: scala.collection.parallel.mutable.ParArray[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@76be1101,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@28549642,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@60a49c5d,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@6ae24700,List(),2147483647), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@6cd27544,List(),2147483647), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@60b..."
         },
         {
           "metadata" : { },
@@ -137,8 +137,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 13,
-          "time" : "Took: 0.660s, at 2018-09-07 12:17"
+          "execution_count" : 3,
+          "time" : "Took: 1.515s, at 2018-09-07 14:09"
         }
       ]
     },
@@ -183,8 +183,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 14,
-          "time" : "Took: 0.622s, at 2018-09-07 12:17"
+          "execution_count" : 4,
+          "time" : "Took: 0.988s, at 2018-09-07 14:09"
         }
       ]
     },
@@ -209,7 +209,8 @@
         "  Int,\n",
         "  mutable.ArrayBuffer[Double],\n",
         "  mutable.ArrayBuffer[Double],\n",
-        "  RealClusterizable[Int, mutable.ArrayBuffer[Double], mutable.ArrayBuffer[Double]]\n",
+        "  RealClusterizable[Int, mutable.ArrayBuffer[Double], mutable.ArrayBuffer[Double]],\n",
+        "  Euclidean[mutable.ArrayBuffer[Double]]\n",
         "](data, metric1, epsilon, maxNumberIter, kernel1, kernelArgs)\n",
         "\n",
         "val t2 = System.currentTimeMillis\n",
@@ -220,16 +221,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 1536315432062\nconvergedDS: scala.collection.GenSeq[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@2e28b6ab,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@484b385b,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@50b8936c,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@1653b499,List(),2147483647), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@7d25d516,List(),2147483647), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@6cbdb309,List(),2147483647..."
+          "text" : "t1: Long = 1536322185690\nconvergedDS: scala.collection.GenSeq[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@76be1101,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@28549642,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@60a49c5d,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@6ae24700,List(),2147483647), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@6cd27544,List(),2147483647), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@60b8081a,List(),2147483647..."
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "0.22"
+            "text/html" : "0.42"
           },
           "output_type" : "execute_result",
-          "execution_count" : 19,
-          "time" : "Took: 0.800s, at 2018-09-07 12:17"
+          "execution_count" : 5,
+          "time" : "Took: 1.560s, at 2018-09-07 14:09"
         }
       ]
     },
@@ -257,16 +258,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "res15: smile.plot.Window = Window(javax.swing.JFrame[frame1,2380,400,1000x1000,invalid,layout=java.awt.BorderLayout,title=Smile Plot 3,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,5,25,990x970,invalid,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777673,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,0x0,invalid,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=9,maximumSize=,minimumSize=,preferredSize=])\n"
+          "text" : "res8: smile.plot.Window = Window(javax.swing.JFrame[frame0,2380,400,1000x1000,invalid,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,5,25,990x970,invalid,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777673,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,0x0,invalid,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=9,maximumSize=,minimumSize=,preferredSize=])\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "Window(javax.swing.JFrame[frame1,2380,400,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 3,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
+            "text/html" : "Window(javax.swing.JFrame[frame0,2380,400,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
           },
           "output_type" : "execute_result",
-          "execution_count" : 10,
-          "time" : "Took: 1.097s, at 2018-09-07 12:16"
+          "execution_count" : 6,
+          "time" : "Took: 2.080s, at 2018-09-07 14:09"
         }
       ]
     }
