--- a/SparkNotebooks/Scala K-Means C4E.snb.ipynb
+++ b/SparkNotebooks/Scala K-Means C4E.snb.ipynb
@@ -16,15 +16,14 @@
       "clustering4ever % default % http://dl.bintray.com/clustering4ever/Clustering4Ever % maven"
     ],
     "customDeps" : [
-      "clustering4ever % clustering4ever_2.11 % 0.6.3",
+      "clustering4ever % clustering4ever_2.11 % 0.6.4",
       "com.github.haifengl:smile-scala_2.11:1.5.0"
     ],
     "customImports" : null,
     "customArgs" : null,
     "customSparkConf" : {
-      "spark.app.name" : "Notebook",
-      "spark.master" : "local[*]",
-      "spark.driver.memory" : "4G"
+      "spark.driver.memory" : "50g",
+      "spark.master" : "local[*]"
     },
     "customVars" : null
   },
@@ -65,15 +64,6 @@
       ],
       "outputs" : [
         {
-          "metadata" : { },
-          "data" : {
-            "text/html" : ""
-          },
-          "output_type" : "execute_result",
-          "execution_count" : 13,
-          "time" : "Took: 0.593s, at 2018-09-06 08:50"
-        },
-        {
           "name" : "stdout",
           "output_type" : "stream",
           "text" : "import smile.plot._\nimport scala.io.Source\nimport scala.collection.{immutable, mutable, parallel}\nimport clustering4ever.scala.clustering.kmeans.{KMeans, KMeansModel}\nimport clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\nimport clustering4ever.scala.indexes.ExternalIndexes\nimport clustering4ever.scala.indexes.NmiNormalizationNature._\nimport clustering4ever.util.ScalaImplicits._\nimport clustering4ever.scala.clusterizables.RealClusterizable\nimport clustering4ever.scala.vectorizables.RealVector\n"
@@ -84,8 +74,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 14,
-          "time" : "Took: 0.610s, at 2018-09-06 08:50"
+          "execution_count" : 1,
+          "time" : "Took: 0.755s, at 2018-09-07 14:18"
         }
       ]
     },
@@ -112,7 +102,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-06 08:43:05--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.8’\n\n     0K .......                                               100%  271K=0.03s\n\n2018-09-06 08:43:05 (271 KB/s) - ‘/tmp/aggregation.csv.8’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-06 08:43:05--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-06 08:43:05--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.10’\n\n     0K .                                                     100%  234M=0s\n\n2018-09-06 08:43:05 (234 MB/s) - ‘/tmp/labels.10’ saved [1576/1576]\n\nFINISHED --2018-09-06 08:43:05--\nTotal wall clock time: 0.1s\nDownloaded: 2 files, 9.4K in 0.03s (324 KB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
+          "text" : "--2018-09-07 13:36:20--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.9’\n\n     0K .......                                               100%  365M=0s\n\n2018-09-07 13:36:20 (365 MB/s) - ‘/tmp/aggregation.csv.9’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-07 13:36:20--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-07 13:36:20--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.10’\n\n     0K .                                                     100%  124M=0s\n\n2018-09-07 13:36:20 (124 MB/s) - ‘/tmp/labels.10’ saved [1576/1576]\n\nFINISHED --2018-09-07 13:36:20--\nTotal wall clock time: 0.4s\nDownloaded: 2 files, 9.4K in 0s (277 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
         }
       ]
     },
@@ -132,8 +122,8 @@
       },
       "cell_type" : "code",
       "source" : [
-        "val datasetSize = 5000000\n",
-        "val dim = 4\n",
+        "val datasetSize = 2000000\n",
+        "val dim = 100\n",
         "val path = \"/tmp/aggregation.csv\"\n",
         "val useAggregationDS = false\n",
         "\n",
@@ -148,7 +138,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "datasetSize: Int = 5000000\ndim: Int = 4\npath: String = /tmp/aggregation.csv\nuseAggregationDS: Boolean = false\nrawData: scala.collection.mutable.Buffer[scala.collection.mutable.ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(0.799261280981757, 0.11461410852882559, 0.11619430893055882, 0.6050202850876077), ArrayBuffer(0.11316109199320834, 0.6656835266429698, 0.8132485862122387, 0.5423850232962416), ArrayBuffer(0.6477991663570888, 0.7082094774261337, 0.2756313931649007, 0.7408394532978514), ArrayBuffer(0.27379711608599866, 0.8135529987470147, 0.06613321423926044, 0.3772438097670565), ArrayBuffer(0.145765044537018, 0.1928032496736065, 0.7305018921812846, 0.48921968688201867), ArrayBuffer(0.6737383275912018, 0.01358402095554323, 0.02417297781629335, 0.6487858176005108), ArrayBuffer(0.69963645..."
+          "text" : "datasetSize: Int = 2000000\ndim: Int = 100\npath: String = /tmp/aggregation.csv\nuseAggregationDS: Boolean = false\nrawData: scala.collection.mutable.Buffer[scala.collection.mutable.ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(0.4127021608244922, 0.015072342651154869, 0.10799190350406374, 0.10970637312396847, 0.1569008905498509, 0.8597422669616767, 1.2960782260285075E-4, 0.9853396805660675, 0.2018103125715781, 0.14642448268847053, 0.8623201639574947, 0.5251123554154499, 0.5099008600171878, 0.8963921306535552, 0.42262032729746724, 0.5290781941825453, 0.3367476330990349, 0.3466161572952129, 0.8823357220995842, 0.06588807078536485, 0.10660155964586138, 0.7844106895827907, 0.18356579593947964, 0.9180716008198188, 0.025498839682826735, 0.9217484800890267, 0.49727395376698014, 0.725878583145658..."
         },
         {
           "metadata" : { },
@@ -156,8 +146,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 20,
-          "time" : "Took: 1m10.494s, at 2018-09-06 08:54"
+          "execution_count" : 3,
+          "time" : "Took: 1m3.830s, at 2018-09-07 13:37"
         }
       ]
     },
@@ -191,7 +181,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "k: Int = 7\niterMax: Int = 40\nepsilon: Double = 0.5\nmetric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nmetric2: clustering4ever.math.distances.scalar.Minkowski[scala.collection.mutable.ArrayBuffer[Double]] = clustering4ever.math.distances.scalar.Minkowski@5a6693b6\n"
+          "text" : "k: Int = 7\niterMax: Int = 40\nepsilon: Double = 0.5\nmetric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nmetric2: clustering4ever.math.distances.scalar.Minkowski[scala.collection.mutable.ArrayBuffer[Double]] = clustering4ever.math.distances.scalar.Minkowski@6e6796b1\n"
         },
         {
           "metadata" : { },
@@ -200,7 +190,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 4,
-          "time" : "Took: 1.165s, at 2018-09-06 08:43"
+          "time" : "Took: 0.935s, at 2018-09-07 13:37"
         }
       ]
     },
@@ -244,16 +234,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 8169145799157\nmodel: clustering4ever.scala.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.scala.clustering.kmeans.KMeansModel@3459e482\nt2: Long = 8172995715005\nres31: Double = 3.849915848\n"
+          "text" : "t1: Long = 15011508962559\nmodel: clustering4ever.scala.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.scala.clustering.kmeans.KMeansModel@24ed7f00\nt2: Long = 15024893349045\nres6: Double = 13.384386486\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "3.849915848"
+            "text/html" : "13.384386486"
           },
           "output_type" : "execute_result",
-          "execution_count" : 21,
-          "time" : "Took: 4.862s, at 2018-09-06 08:54"
+          "execution_count" : 5,
+          "time" : "Took: 14.359s, at 2018-09-07 13:37"
         }
       ]
     },
@@ -303,16 +293,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 7480515356629\nt2: Long = 7480547486179\nseqData: scala.collection.mutable.Seq[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ArraySeq(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@92eeef7,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@688598ef,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@33c52a2,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@5cd9e0a3,List(),2147483647), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@227ee499,List(),2147483647), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@6..."
+          "text" : "t1: Long = 15025863841986\nt2: Long = 15035361233137\nseqData: scala.collection.mutable.Seq[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ArraySeq(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@30b900c6,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@21a0c162,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@73721b8f,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@4adf031a,List(),2147483647), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@329895b7,List(),2147483647), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVect..."
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "0.5037806007242553"
+            "text/html" : "4.393892996457886"
           },
           "output_type" : "execute_result",
           "execution_count" : 6,
-          "time" : "Took: 1.656s, at 2018-09-06 08:43"
+          "time" : "Took: 52.197s, at 2018-09-07 13:38"
         }
       ]
     },
@@ -342,7 +332,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "clusterized11: scala.collection.mutable.Buffer[(model.ClusterID, scala.collection.mutable.ArrayBuffer[Double])] = ArrayBuffer((2,ArrayBuffer(15.55, 28.65)), (1,ArrayBuffer(14.9, 27.55)), (1,ArrayBuffer(14.45, 28.35)), (1,ArrayBuffer(14.15, 28.8)), (1,ArrayBuffer(13.75, 28.05)), (1,ArrayBuffer(13.35, 28.45)), (1,ArrayBuffer(13.0, 29.15)), (1,ArrayBuffer(13.45, 27.5)), (1,ArrayBuffer(13.6, 26.5)), (1,ArrayBuffer(12.8, 27.35)), (1,ArrayBuffer(12.4, 27.85)), (1,ArrayBuffer(12.3, 28.4)), (1,ArrayBuffer(12.2, 28.65)), (1,ArrayBuffer(13.4, 25.1)), (1,ArrayBuffer(12.95, 25.95)), (1,ArrayBuffer(12.9, 26.5)), (1,ArrayBuffer(11.85, 27.0)), (1,ArrayBuffer(11.35, 28.0)), (1,ArrayBuffer(11.15, 28.7)), (1,ArrayBuffer(11.25, 27.4)), (1,ArrayBuffer(10.75, 27.7)), (1,ArrayBuffer(10.5, 28.35)), (1,ArrayBu..."
+          "text" : "clusterized11: scala.collection.mutable.Buffer[(model.ClusterID, scala.collection.mutable.ArrayBuffer[Double])] = ArrayBuffer((0,ArrayBuffer(0.4127021608244922, 0.015072342651154869, 0.10799190350406374, 0.10970637312396847, 0.1569008905498509, 0.8597422669616767, 1.2960782260285075E-4, 0.9853396805660675, 0.2018103125715781, 0.14642448268847053, 0.8623201639574947, 0.5251123554154499, 0.5099008600171878, 0.8963921306535552, 0.42262032729746724, 0.5290781941825453, 0.3367476330990349, 0.3466161572952129, 0.8823357220995842, 0.06588807078536485, 0.10660155964586138, 0.7844106895827907, 0.18356579593947964, 0.9180716008198188, 0.025498839682826735, 0.9217484800890267, 0.49727395376698014, 0.7258785831456588, 0.3561337376802901, 0.868480895194272, 0.7921421195513476, 0.4226061713613388, 0...."
         },
         {
           "metadata" : { },
@@ -351,7 +341,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 7,
-          "time" : "Took: 1.349s, at 2018-09-06 08:43"
+          "time" : "Took: 1m11.928s, at 2018-09-07 13:39"
         }
       ]
     },
@@ -379,16 +369,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "rawData: Array[Array[Double]] = Array(Array(15.55, 28.65), Array(14.9, 27.55), Array(14.45, 28.35), Array(14.15, 28.8), Array(13.75, 28.05), Array(13.35, 28.45), Array(13.0, 29.15), Array(13.45, 27.5), Array(13.6, 26.5), Array(12.8, 27.35), Array(12.4, 27.85), Array(12.3, 28.4), Array(12.2, 28.65), Array(13.4, 25.1), Array(12.95, 25.95), Array(12.9, 26.5), Array(11.85, 27.0), Array(11.35, 28.0), Array(11.15, 28.7), Array(11.25, 27.4), Array(10.75, 27.7), Array(10.5, 28.35), Array(9.65, 28.45), Array(10.25, 27.25), Array(10.75, 26.55), Array(11.7, 26.35), Array(11.6, 25.9), Array(11.9, 25.05), Array(12.6, 24.05), Array(11.9, 24.5), Array(11.1, 25.2), Array(10.55, 25.15), Array(10.05, 25.95), Array(9.35, 26.6), Array(9.3, 27.25), Array(9.2, 27.8), Array(7.5, 28.25), Array(8.55, 27.45), Ar..."
-        },
-        {
-          "metadata" : { },
-          "data" : {
-            "text/html" : "Window(javax.swing.JFrame[frame0,460,37,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 1,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
-          },
-          "output_type" : "execute_result",
-          "execution_count" : 8,
-          "time" : "Took: 1.654s, at 2018-09-06 08:43"
+          "text" : "java.lang.IllegalArgumentException: Invalid data dimension: 100\n  at smile.plot.ScatterPlot.plot(ScatterPlot.java:514)\n  at smile.plot.ScatterPlot.plot(ScatterPlot.java:484)\n  at smile.plot.Operators$class.plot(Operators.scala:85)\n  at smile.plot.package$.plot(package.scala:23)\n  ... 69 elided\n"
         }
       ]
     },
@@ -422,16 +403,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "trueLabels: scala.collection.mutable.Buffer[Int] = ArrayBuffer(2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,..."
-        },
-        {
-          "metadata" : { },
-          "data" : {
-            "text/html" : "0.8451873667264422"
-          },
-          "output_type" : "execute_result",
-          "execution_count" : 9,
-          "time" : "Took: 1.309s, at 2018-09-06 08:43"
+          "text" : "java.lang.IllegalArgumentException: requirement failed\n  at scala.Predef$.require(Predef.scala:212)\n  at clustering4ever.scala.indexes.ExternalIndexes.mutualInformationInternal(ExternalIndexes.scala:16)\n  at clustering4ever.scala.indexes.ExternalIndexes$.nmi(ExternalIndexes.scala:64)\n  ... 69 elided\n"
         }
       ]
     }
